chore: correction gap

--- a/src/components/Containers/Help/styles.css
+++ b/src/components/Containers/Help/styles.css
@@ -30,7 +30,7 @@
 
 @media (width <= 768px) {
    .all-help-card {
-      gap: 25px;
+      gap: 30px;
       margin-top: 50px;
    }
 }
